# CustomKnowledgeBot

./: .env_revisbali  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yml  main.py  main_01.py  main_02.py  pyproject.toml  pyrightconfig.json  register_telegram_hook.sh  requirements.txt  run-ollama.sh
.github/workflows/: deploy.yml
.github/worlflows/: deploy.yml
helpers/: json_directoryloader.py  knowledge_loader.py  llms.py  md_directoryloader.py  md_textsplitter.py  nltk_textsplitter.py
prompts/: default.txt  zephyr.j2  zephyr.txt  zephyr_ayu.txt  zephyr_investment_book_writer.txt
services/: telegram_bot.py
services/assistants/: assistant_factory.py  base_assistant.py  revisbali_assistant.py  test_revisbali_assistant.py
